--- a/web/src/components/Card/Card.module.scss
+++ b/web/src/components/Card/Card.module.scss
@@ -48,14 +48,12 @@ $cardHeight: 280px;
 }
 
 .content {
-  position: relative;
+  position: static;
   // border-radius: calc(var(--gap) * 4);
   background: var(--surface4);
-  overflow: hidden;
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  @include helpers.shadow();
 }
 
 .avatar {
@@ -64,7 +62,8 @@ $cardHeight: 280px;
   left: 0;
   width: 100%;
   height: $cardHeight;
-  transform: translateZ(0);
+  isolation: isolate;
+  z-index: 0;
   backface-visibility: hidden;
   overflow: hidden;
 
@@ -74,7 +73,7 @@ $cardHeight: 280px;
     object-fit: cover;
 
     filter: grayscale(1);
-    transition: filter 200ms ease, transform 250ms linear;
+    transition: filter 200ms ease, transform 250ms ease-out;
   }
 
   /**
@@ -88,7 +87,7 @@ $cardHeight: 280px;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    // z-index: 1;
     opacity: 0;
   }
 
