--- a/web/src/styles/_helpers.scss
+++ b/web/src/styles/_helpers.scss
@@ -10,10 +10,9 @@
 }
 
 @mixin shadow() {
-  box-shadow: 0 1rem 0.5rem -0.5rem;
   box-shadow: 0 2.8px 2.2px
       hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.03)),
-    0 6.7px 5.3px
+    /** */ 0 6.7px 5.3px
       hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.01)),
     0 12.5px 10px
       hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.02)),
