--- a/web/src/components/Card/Card.module.scss
+++ b/web/src/components/Card/Card.module.scss
@@ -24,18 +24,8 @@ $cardHeight: 280px;
       filter: grayscale(0);
       transform: scale(1.05);
     }
-    .avatar::before {
-      opacity: 0.7;
-    }
     .avatar::after {
       opacity: 1;
-    }
-  }
-
-  &:focus {
-    img {
-      outline: 1rem solid white;
-      outline-offset: -1rem;
     }
   }
 }
@@ -49,8 +39,7 @@ $cardHeight: 280px;
 
 .content {
   position: static;
-  // border-radius: calc(var(--gap) * 4);
-  background: var(--surface4);
+  border-radius: calc(var(--gap) * 4);
   width: 100%;
   height: 100%;
   margin: 0 auto;
@@ -65,6 +54,8 @@ $cardHeight: 280px;
   isolation: isolate;
   z-index: 0;
   backface-visibility: hidden;
+
+  border-radius: inherit;
   overflow: hidden;
 
   :global(img) {
@@ -87,11 +78,12 @@ $cardHeight: 280px;
     position: absolute;
     top: 0;
     left: 0;
-    // z-index: 1;
+    z-index: 1;
     opacity: 0;
   }
 
   &::before {
+    opacity: 0.25;
     background: linear-gradient(
       to top,
       hsl(0 0% 0% / 0.79) 0%,
