--- a/web/src/layouts/Project/Project2Column.astro
+++ b/web/src/layouts/Project/Project2Column.astro
@@ -72,22 +72,22 @@ $containerWidth: 100vw - (100vw * $containerPadW);
 .gallery {
   .page {
     width: 100%;
-    height: clamp(30vh, 50vh, 60vh);
+    height: clamp(640px, 50vh, 60vh);
     display: flex;
     align-items: center;
     justify-content: center;
 
     &.h100 {
-      height: 100vh;
+      height: clamp(640px, 100vh);
     }
     &.h50 {
-      height: 50vh;
+      height: clamp(640px, 50vh);
     }
     &.h70 {
-      height: 70vh;
+      height: clamp(640px, 70vh);
     }
     &.h80 {
-      height: 80vh;
+      height: clamp(640px, 80vh);
     }
   }
 }
