--- a/web/src/layouts/Project/Project.astro
+++ b/web/src/layouts/Project/Project.astro
@@ -1,22 +1,34 @@
 ---
+import {toPage} from '../../lib/page/Page'
 import BaseLayout from '~/layouts/base.astro';
 import Masthead from '~/components/Masthead';
+
 import {cn} from '../../lib/helpers';
-const content = Astro.props.content || {};
+
+/** @ts-ignore */
+const abspath = import.meta.url.pathname;
+const astroContextSymbol = Symbol.for('astro.context');
+const astroContext = Astro.props[astroContextSymbol];
+
+let page:Page = toPage({
+  layout: abspath,
+  ...Astro.props.content,
+  [astroContextSymbol]: astroContext
+});
 ---
 
-<BaseLayout {content}>
+<BaseLayout {page}>
   <script type="text/javascript" src="https://unpkg.com/external-svg-loader@latest/svg-loader.min.js" async></script>
   <article id="content">
     <link rel="stylesheet" href="/styles/devices.min.css" />
     <link rel="stylesheet" href="/styles/browser.min.css" />
 
     <Masthead className="surface4"
-      title={content.title}
-      subtitle={content.subtitle}
-      image={content.logo}
+      title={page.content.title}
+      subtitle={page.content.subtitle}
+      image={page.logo}
     ></Masthead>
-    <section class={cn('project',content.wrapper)} aria-labelledby="masthead-title">
+    <section class={cn('project',page.wrapper)} aria-labelledby="masthead-title">
       <slot />
     </section>
   </article>
