Organize Garden listing into it's chunk (components/GardenList)

--- a/web/src/layouts/base.astro
+++ b/web/src/layouts/base.astro
@@ -34,7 +34,7 @@ const page:Page = Astro.props.page;
           <Header slot="header" client:idle />
           <div class="container-wrapper">
             <slot />
-            <GlobalSettings client:idle />
+            <!-- <GlobalSettings client:idle /> -->
           </div>
 
           <Footer slot="footer" />
