--- a/web/src/layouts/Post/Post.astro
+++ b/web/src/layouts/Post/Post.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../base.astro';
 import {Page, toPage} from '../../lib/page/Page';
 
 import Masthead from '../../components/Masthead';
-import Tag from '../../components/Tag';
+import Tag, {TagVariant} from '../../components/Tag/Tag';
 
 import {cn,fromISOString, toUnixTimestamp, toDMYDateString, emojifyStatus} from '../../lib/helpers';
 
@@ -29,13 +29,13 @@ let page:Page = toPage({
     >
       {page.tags && (
         <div class="metadata-container" aria-label="Tagged as">
-          <dl class="date-container">
+          <span class="date-container">
             <Tag className="status" variant="transparent" aria-label={page.status}>{emojifyStatus(page.status)}</Tag>
-            <dd class="status" aria-label={`Published at: ${toDMYDateString(page.publishedAt)}`}><em>{toDMYDateString(page.publishedAt)}</em></dd>
-          </dl>
-          <dl class="tags-container" aria-label="Tagged as">
-            {page.tags.map(tag => <Tag className="tag" variant='transparent'>{tag}</Tag>)}
-          </dl>
+            <dfn class="status" aria-label={`Published at: ${toDMYDateString(page.publishedAt)}`}><em>{toDMYDateString(page.publishedAt)}</em></dfn>
+          </span>
+          <span class="tags-container" aria-label="Tagged as">
+            {page.tags.map(tag => <Tag className="tag" variant={TagVariant.TRANSPARENT}>{tag}</Tag>)}
+          </span>
         </div>
       )}
     </Masthead>
@@ -76,7 +76,7 @@ let page:Page = toPage({
       margin-inline-start: 0;
     }
 
-    dd + dd {
+    dfn + dfn {
       margin-left: calc( 2 * var(--gap));
     }
   }
