Improved SEO Tags

--- a/web/src/layouts/Project/Project.astro
+++ b/web/src/layouts/Project/Project.astro
@@ -28,7 +28,7 @@ let page:Page = toPage({
       subtitle={page.content.subtitle}
       image={page.logo}
     ></Masthead>
-    <section class={cn('project',page.wrapper)} aria-labelledby="masthead-title">
+    <section class={cn('project',page.variant)} aria-labelledby="masthead-title">
       <slot />
     </section>
   </article>
