--- a/web/src/components/Layout/Layout.astro
+++ b/web/src/components/Layout/Layout.astro
@@ -2,10 +2,10 @@
   <header class="header">
     <slot name="header" />
   </header>
-  <main class="main" id="main" tabIndex={-1}>
+  <div class="main" id="main" tabIndex={-1}>
     <slot />
-  </main>
-  <footer role="contentinfo" class="footer">
+  </div>
+  <footer class="footer">
     <div class="container pad4">
       <slot name="footer" class="container" />
     </div>
