Fixed image bug

--- a/web/src/layouts/base.astro
+++ b/web/src/layouts/base.astro
@@ -52,7 +52,7 @@ let seo = {
     <meta name="description" content={page.content.description} />
     <meta name="schema" content={page.schema} />
     <SEO module="og" {...seo} />
-    <!-- <SEO module="twitter" {...seo} /> -->
+    <SEO module="twitter" {...seo} />
     <SEO module="ld" {...seo} />
   </head>
   <body data-layout="base">
