--- a/web/src/styles/_base.scss
+++ b/web/src/styles/_base.scss
@@ -3,8 +3,11 @@
 @use "./grids" as grids;
 @use "colorscheme" as colors;
 
-@import "./typo";
-@import "./anims";
+@import url('https://rsms.me/inter/inter.css');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
+
+@import './typo';
+@import './anims';
 
 /**
  * Custom css properties (available at runtime only)
@@ -67,6 +70,7 @@ html {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
   word-wrap: break-word;
 
   background: var(--surface1);
