--- a/web/src/styles/_exports.scss
+++ b/web/src/styles/_exports.scss
@@ -4,9 +4,9 @@
  * Exported variables (available at buildtime only)
  */
 :export {
-  breakpoint-small: map-get($breakpoints, "small");
-  breakpoint-medium: map-get($breakpoints, "medium");
-  breakpoint-large: map-get($breakpoints, "large");
+  breakpoint-small: map-get($breakpoints, 'small');
+  breakpoint-medium: map-get($breakpoints, 'medium');
+  breakpoint-large: map-get($breakpoints, 'large');
 
   gap: $gap;
 }
