--- a/web/src/components/Masthead/masthead.module.scss
+++ b/web/src/components/Masthead/masthead.module.scss
@@ -35,7 +35,7 @@
 }
 .subtitle {
   color: var(--text2);
-  font-variation-settings: "wght" var(--text-weight);
+  font-variation-settings: 'wght' var(--subtitle-weight);
 }
 
 .logo {
