--- a/web/src/layouts/home.astro
+++ b/web/src/layouts/home.astro
@@ -26,7 +26,7 @@ let page:Page = toPage({
 let projects: Page[] = await listProjects();
 let gardenItems: Page[] = await listGarden();
 
-let $ = loadHTML(page.content.content,null,false);
+let $ = loadHTML(page.content.content);
 
 ---
 
@@ -67,7 +67,7 @@ let $ = loadHTML(page.content.content,null,false);
 @use "sass:math";
 @use "src/styles/breakpoints" as bp;
 @use "src/styles/grids" as grids;
-@use "src/styles/typo" as typo;
+@use "src/styles/helpers" as h;
 
 #content {
   position: relative;
@@ -95,9 +95,9 @@ $fold: 100vh;
     justify-content: flex-end;
 
     > :global(.caption) {
-      font-family: var(--title-family);
+      font-family: var(--subtitle-family);
       font-size: calc( var(--h1) * 1.1 );
-      @include typo.weight(var(--text-weight));
+      @include h.weight(var(--subtitle-weight));
 
       margin-bottom: 1em;
     }
